2010-09-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSObject.h:
	* Source/NSObject.m:
	Remove old TypedStream methods
	* Source/NSFileManager.m:
	Warn if filesystem support is not available.

2010-09-07 Eric Wasylishen <ewasylishen@gmail.com>

	* Headers/Additions/GNUstepBase/preface.h.in: Remove include of
	objc/sarray.h

2010-09-04 Niels Grewe <niels.grewe@halbordnung.de>

	* config/config.non-fragile-ivars.m: Remove useless include of
	objc-common.g (__has_feature is a built-in clang macro).

2010-09-02 David Chisnall <theraven@gna.org>

	* Source/NSObject.m

	Improve the efficiency of NSObject's methodSignatureForSelector by:

	- Moving the linear search over all of the method lists in the class hierarchy to the end.  If we found the type info in the protocol list, we were throwing this info away.  Doing something expensive and then discarding the result is generally not a good idea.

	- Replacing the linear search of the method lists with a dtable lookup on libobjc2.  The type info for methods is part of the slot, so we only need to do the expensive search at all on the old runtime.  With libobjc2, type info lookup costs as little as IMP lookup, so doing things the slow way is not required.

2010-08-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/cvtenc.m: Add -Unicode option.  Fix to allow reading from stdin
	* Tools/cvtenc.1: update

2010-08-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: try to make inter-thread notification via
	pipe more robust.
	* Source/NSTask.m: make windows thread waiting for task into an
	NSThread so that any thread-dependent code can work.

2010-08-25  Jonathan Gillaspie  <jonathan.gillaspie@testplant.com>

	* Source/Objective2/sync.m:  Removed weak declarations

2010-08-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSFileHandle.m (-initWithStandardError,
	-initWithStandardInput, -initWithStandardOutput): Restore lost