@@ -242,19 +242,18 @@ IMP objc_msg_lookup(id, SEL);
 IMP objc_msg_lookup_super(struct objc_super*, SEL);
 
 OBJC_GNU_RUNTIME_UNSUPPORTED("Protocol introspection")
+Protocol **objc_copyProtocolList(unsigned int *count);
+
 BOOL protocol_conformsToProtocol(Protocol *p, Protocol *other);
 
-OBJC_GNU_RUNTIME_UNSUPPORTED("Protocol introspection")
 struct objc_method_description *protocol_copyMethodDescriptionList(Protocol *p,
   BOOL isRequiredMethod, BOOL isInstanceMethod, unsigned int *count);
 
 OBJC_GNU_RUNTIME_UNSUPPORTED("Protocol introspection")
 objc_property_t *protocol_copyPropertyList(Protocol *p, unsigned int *count);
 
-OBJC_GNU_RUNTIME_UNSUPPORTED("Protocol introspection")
 Protocol **protocol_copyProtocolList(Protocol *p, unsigned int *count);
 
-OBJC_GNU_RUNTIME_UNSUPPORTED("Protocol introspection")
 struct objc_method_description protocol_getMethodDescription(Protocol *p,
   SEL aSel, BOOL isRequiredMethod, BOOL isInstanceMethod);
 
